add the peak time for energy price

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Required dependencies
 numpy>=1.19.0
-
+psycopg2-binary
 # Optional dependencies
 # For database functionality:
 # mysql-connector-python>=8.0.0
